<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.community.zenith.mathracer.loginactivity.LoginFragment">

    <EditText
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:maxLines="1"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:id="@+id/login_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:maxLines="1"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:elevation="1dp"
        android:layout_margin="10dp"
        android:id="@+id/login_button"
        android:background="@drawable/ripple_settings_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/green"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ProgressBar
        android:layout_marginTop="100dp"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
