<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentsactivity.StudentsActivity">

    <RelativeLayout
        android:id="@+id/students_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/students_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/students_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:id="@+id/students_empty_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_people_24dp_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/grey"
                android:text="@string/no_students"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/new_student_fab"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:elevation="4dp"
            android:src="@drawable/ic_person_add_24dp"
            android:background="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/student_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@id/student_name"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:id="@+id/student_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:layout_below="@id/student_identifier"
            android:id="@+id/student_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:id="@+id/races_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_traffic_24dp_grey"
                android:layout_gravity="center_horizontal"
                android:layout_width="48dp"
                android:layout_height="48dp" />
            <TextView
                android:textColor="@color/grey"
                android:text="@string/no_races"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@color/green"
            android:elevation="2dp"
            android:id="@+id/login_as_student"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:text="@string/login_as_student"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_above="@id/login_as_student"
            android:layout_below="@id/student_identifier"
            android:visibility="gone"
            android:id="@+id/student_loaded_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.jjoe64.graphview.GraphView
                android:id="@+id/student_graph"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/student_graph"
                android:id="@+id/races_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/race_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/race_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/race_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/questions_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_margin="16dp"
        android:id="@+id/new_student_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/first_name"
            android:id="@+id/new_student_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/new_student_first_name"
            android:hint="@string/last_name"
            android:id="@+id/new_student_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_student_fab"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_done_24dp_white"
            android:layout_alignParentBottom="true"
            android:background="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
