<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.community.zenith.mathracer.raceactivity.RaceFragment">

    <TextView
        android:layout_margin="20dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/question_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:textSize="20sp"
        android:layout_below="@id/question_view"
        android:id="@+id/sub_question_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:layout_below="@id/sub_question_view"
        android:id="@+id/questions_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_alignParentEnd="true"
            android:id="@+id/send_view"
            android:background="@drawable/ripple_settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_send_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <EditText
            android:layout_toStartOf="@id/send_view"
            android:textSize="20sp"
            android:id="@+id/answer_view"
            android:inputType="numberSigned"
            android:ellipsize="end"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_below="@id/sub_question_view"
        android:layout_above="@id/bottom_layout"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/races_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/ic_traffic_24dp_grey"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp" />
        <TextView
            android:layout_gravity="center_horizontal"
            android:textColor="@color/grey"
            android:text="@string/race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <RelativeLayout
        android:visibility="gone"
        android:elevation="2dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:id="@+id/race_complete_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:id="@+id/race_complete"
                android:layout_centerHorizontal="true"
                android:text="@string/race_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/race_complete"
                android:id="@+id/race_complete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/again_view"
                android:layout_below="@id/race_complete_text"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:elevation="2dp"
                android:background="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/again_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
